--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,65 @@
 @import './common';
 @import './example';
+body {
+  text-align: center;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+  cursor: default;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: 200px;
+  object-fit: contain;
+}
+
+.search-form {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-bottom: 20px;
+
+  background-color: aqua;
+
+  text-align: center;
+}
+.gallery {
+  padding-right: 30px;
+  padding-left: 30px;
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.photo-card {
+  width: 300px;
+  border-style: outset;
+  border-radius: 3px;
+  border-color: rgba(240, 255, 255, 0.596);
+}
+
+.info {
+  display: flex;
+  justify-content: space-around;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.load-more {
+  margin-top: 30px;
+  margin-bottom: 30px;
+
+  width: 300px;
+  height: 50px;
+}
+
+.js-display_non {
+  display: none;
+}
